--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,30 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+
+# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
+# See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   ruby: circleci/ruby@1.4.0
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build:
-    working_directory: ~/psydiary_back_end # THIS SHOULD BE NAME OF YOUR APP
     docker:
-      - image: cimg/ruby:3.1.1
-        environment:
-          PGHOST: localhost
-          PGUSER: psydiary_back_end # THIS SHOULD BE NAME OF YOUR APP
-          RAILS_ENV: test
-      - image: postgres:13.2
-        environment:
-          POSTGRES_USER: psydiary_back_end # THIS SHOULD BE NAME OF YOUR APP
-          POSTGRES_DB: psydiary_back_end_test # find db name in /config/database.yml
-          POSTGRES_PASSWORD:
+      - image: cimg/ruby:3.1.0
     executor: ruby/default
-		steps:
+    steps:
       - checkout
       - run:
-          name: psydiary_back_end # THIS SHOULD BE NAME OF YOUR APP
+          name: Which bundler?
           command: bundle -v
-      - checkout
-      - run: bundle install --path vendor/bundle
-      - run: bundle exec rspec
+      - ruby/bundle-install
+
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+workflows:
+  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
+    jobs:
+      - build
