--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore application configuration
+/config/application.yml
+
+/docker-compose.yml
+/Dockerfile
