--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,11 @@ version: 2.1
 orbs:
   ruby: circleci/ruby@1.4.0
   # heroku: circleci/heroku@1.2.6
-
+  
+workflows:
+  test-env-vars:
+    jobs:
+      - build
 jobs:
   build:
     working_directory: ~/psydiary_back_end # THIS SHOULD BE NAME OF YOUR APP
